trying to fix button focus on mobile and add job text wrap

--- a/client/src/JobPage.css
+++ b/client/src/JobPage.css
@@ -352,7 +352,11 @@
 
 @media (hover: none) and (pointer: coarse) {
   .action-btn:focus {
-    outline: none;
+    border-color: black;
+  }
+
+  .action-btn:hover {
+    border-color: black;
   }
 }
 
